--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -4,6 +4,5 @@
   "nl_for_brace": "add",
   "nl_while_brace": "add",
   "nl_struct_brace": "add",
-  "indent_columns": 3,
-  "indent_sing_line_comments": 3
+  "indent_columns": 3
 }
